reference-llvm/tests/should-fail/fail13.mu
// expression test -- bad lhs for is

function @entry foo() {
    7 is 8;
}
